[gd_scene load_steps=18 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/calendar_button/scripts/calendar_script.gd" type="Script" id=3]
[ext_resource path="res://scenes/EditNote.gd" type="Script" id=4]
[ext_resource path="res://addons/calendar_button/btn_img/btn_32x32_03.png" type="Texture" id=5]
[ext_resource path="res://addons/calendar_button/btn_img/btn_32x32_04.png" type="Texture" id=6]
[ext_resource path="res://assets/emojis/moods/5happy.png" type="Texture" id=7]
[ext_resource path="res://assets/emojis/moods/3meh.png" type="Texture" id=8]
[ext_resource path="res://assets/emojis/moods/2dissatisfied.png" type="Texture" id=9]
[ext_resource path="res://assets/emojis/moods/4content.png" type="Texture" id=10]
[ext_resource path="res://assets/emojis/moods/1sad.png" type="Texture" id=11]
[ext_resource path="res://assets/emojis/moods/1sadwhite.png" type="Texture" id=12]
[ext_resource path="res://assets/emojis/moods/5happywhite.png" type="Texture" id=13]
[ext_resource path="res://assets/emojis/moods/2dissatisfiedwhite.png" type="Texture" id=14]
[ext_resource path="res://assets/emojis/moods/3mehwhite.png" type="Texture" id=15]
[ext_resource path="res://assets/emojis/moods/4contentwhite.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[node name="EditNote" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 1075.0
margin_bottom = 2335.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1070.0
margin_bottom = 389.0
custom_fonts/font = SubResource( 1 )
text = "

Edit Note
"
align = 1
valign = 1

[node name="Title2" type="Label" parent="VBoxContainer"]
margin_top = 393.0
margin_right = 1070.0
margin_bottom = 441.0
size_flags_vertical = 1
size_flags_stretch_ratio = 0.3
text = "Date"
align = 1
valign = 1

[node name="DateContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 445.0
margin_right = 1070.0
margin_bottom = 565.0

[node name="CalendarButton" type="TextureButton" parent="VBoxContainer/DateContainer"]
margin_right = 432.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.45
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 5
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/DateContainer"]
margin_left = 436.0
margin_right = 1070.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.66

[node name="DateLabel" type="Label" parent="VBoxContainer/DateContainer/VBoxContainer"]
margin_right = 634.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "21-11-2021"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/DateContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 634.0
margin_bottom = 120.0
size_flags_horizontal = 3

[node name="HourLabel" type="LineEdit" parent="VBoxContainer/DateContainer/VBoxContainer/HBoxContainer"]
margin_right = 140.0
margin_bottom = 68.0
size_flags_vertical = 3
text = "10"
align = 1
max_length = 2

[node name="Label" type="Label" parent="VBoxContainer/DateContainer/VBoxContainer/HBoxContainer"]
margin_left = 144.0
margin_right = 154.0
margin_bottom = 68.0
size_flags_vertical = 3
text = ":"
align = 1
valign = 1

[node name="MinuteLabel" type="LineEdit" parent="VBoxContainer/DateContainer/VBoxContainer/HBoxContainer"]
margin_left = 158.0
margin_right = 298.0
margin_bottom = 68.0
size_flags_vertical = 3
text = "00"
align = 1
max_length = 2
context_menu_enabled = false
shortcut_keys_enabled = false

[node name="Button" type="Button" parent="VBoxContainer/DateContainer/VBoxContainer/HBoxContainer"]
margin_left = 302.0
margin_right = 634.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "OK"

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 569.0
margin_right = 1070.0
margin_bottom = 668.0
size_flags_vertical = 1
text = "
Mood"
align = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 672.0
margin_right = 1070.0
margin_bottom = 872.0
alignment = 1

[node name="SadButton" type="TextureButton" parent="VBoxContainer/ButtonsContainer"]
show_behind_parent = true
margin_left = 27.0
margin_right = 227.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="DissatisfiedButton" type="TextureButton" parent="VBoxContainer/ButtonsContainer"]
margin_left = 231.0
margin_right = 431.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 14 )
expand = true
stretch_mode = 5

[node name="MehButton" type="TextureButton" parent="VBoxContainer/ButtonsContainer"]
margin_left = 435.0
margin_right = 635.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 15 )
expand = true
stretch_mode = 5

[node name="ContentButton" type="TextureButton" parent="VBoxContainer/ButtonsContainer"]
margin_left = 639.0
margin_right = 839.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
toggle_mode = true
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 16 )
expand = true
stretch_mode = 5

[node name="HappyButton" type="TextureButton" parent="VBoxContainer/ButtonsContainer"]
margin_left = 843.0
margin_right = 1043.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="Tween" type="Tween" parent="."]

[connection signal="date_selected" from="VBoxContainer/DateContainer/CalendarButton" to="." method="_on_CalendarButton_date_selected"]
[connection signal="text_changed" from="VBoxContainer/DateContainer/VBoxContainer/HBoxContainer/HourLabel" to="." method="_on_HourLabel_text_changed"]
[connection signal="text_changed" from="VBoxContainer/DateContainer/VBoxContainer/HBoxContainer/MinuteLabel" to="." method="_on_MinuteLabel_text_changed"]
[connection signal="pressed" from="VBoxContainer/DateContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/SadButton" to="." method="_on_SadButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/DissatisfiedButton" to="." method="_on_DissatisfiedButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/MehButton" to="." method="_on_MehButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/ContentButton" to="." method="_on_ContentButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/HappyButton" to="." method="_on_HappyButton_pressed"]
